--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -23,19 +23,7 @@
       padding-bottom: 5rem;
     }
 
-    &__image {
-      display: flex;
-      height: 100%;
-      align-items: center;
-      justify-content: center;
 
-      @include respond(tab-port) {
-        padding-bottom: 6.4rem;
-      }
-      @include respond(tab-land) {
-        height: 100%;
-      }
-    }
 
     &__info {
       display: flex;
@@ -44,7 +32,7 @@
       flex-direction: column;
 
       @include respond(phone) {
-        align-items: center;
+        align-items: left;
       }
 
       &-text {
@@ -52,11 +40,11 @@
 
         @include respond(tab-port) {
           font-size: 1.5rem;
-          text-align: center;
+          text-align: left;
         }
         @include respond(phone) {
           font-size: 1.6rem;
-          text-align: center;
+          text-align: left;
         }
 
         &--important {
