--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,12 +1,13 @@
+
 #hero {
   min-height: 100vh;
   height: 100vh;
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  background: $black-color;
   font-weight: 400;
-  color: $dark-blue-text;
+  color: $white-color;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
@@ -14,28 +15,26 @@
   bottom: 0;
   right: 0;
   z-index: -1;
+ 
 
-  // If you want to set a background image on the hero section, uncomment these with yout custom image
 
-  /* background: url("/src/assets/[your-image].png");
-  background-position: center;
-  background-size: cover; */
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
   }
 
   .hero-title {
-    font-size: 5.6rem;
+    font-size: 4rem;
     font-weight: 700;
     margin-bottom: 3.2rem;
     text-align: left;
+    
 
     @include respond(tab-land) {
       font-size: 4rem;
     }
     @include respond(tab-port) {
-      font-size: 3.6rem;
+      font-size: 3.8rem;
       text-align: center;
     }
     @include respond(phone) {
