--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,6 +1,6 @@
 #projects {
-  background-color: $white-color;
-  color: $dark-blue-text;
+  background-color: $black-color;
+  color: $white-color;
   margin-top: -15rem;
   padding-top: 15rem;
 
@@ -36,6 +36,7 @@
 
       &-title {
         font-weight: bold;
+        color: $primary-color;
         margin-bottom: 1.8rem;
         font-size: $mid-font-size;
 
