--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -5,7 +5,7 @@
   padding: 15rem 0 10rem 0;
   margin-top: -15rem;
   margin-bottom: -1px;
-  color: $white-color;
+  color: white;
 
   @include respond(tab-land) {
     padding: 10rem 0;
@@ -17,7 +17,6 @@
   .contact-wrapper {
     margin-top: 3.2rem;
     padding: 0 2rem;
-    backface-visibility: hidden;
 
     &__text {
       margin-bottom: 2.5rem;
